--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
     <h1 class="titulo-principal">The Last of Us</h1> <!-- Título principal centralizado -->
     
     <h3>
-        O drama narra um futuro pandêmico que foi devastador para humanidade, deixando os seres humanos à beira da extinção. O vírus transforma pessoas em canibais e se espalha rapidamente com uma simples mordida.
+        The Last of Us é um jogo de ação e aventura de 2013 desenvolvido pela Naughty Doge e publicado pela Sony Computer Entertainment. 
+        Os jogadores controlam Joel, um contrabandista encarregado de escoltar uma adolescente, Ellie, através dos Estados Unidos pós-apocalípticos. 
+        The Last of Us é jogado de uma perspectiva de terceira pessoa. Os jogadores usam armas de fogo e armas improvisadas, e podem usar furtividade para se defender contra humanos hostis e criaturas canibais infectadas por um fungo mutante. 
+        No modo multijogador online, até oito jogadores se envolvem em jogabilidade cooperativa e competitiva.
     </h3>
 </body>
 </html>
